# misis2023f-23-03-fokaidi-v-n

./: .gitignore  0276A.cpp  1352A  CMakeLists.txt  status.md
prj.codeforces/: CMakeLists.txt
prj.lab/: CMakeLists.txt  complex.cpp  complex.hpp  rational.cpp  test_complex.cpp
prj.lab/complex/: complex.cpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_rational.cpp
