add_executable(4a 0004a.cpp)
add_executable(263a 0263a.cpp)
add_executable(271a 0271a.cpp)
add_executable(276a 0276a.cpp)
add_executable(617a 0617a.cpp)
add_executable(935b 0935b.cpp)
add_executable(978a 0978a.cpp)
add_executable(978b 0978b.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1858a 1858a.cpp)
